<resources>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_login_with">Or Login With</string>
    <string name="dont_have_account">Don’t have an account? <b><u>Sign Up</u></b></string>
    <string name="register">Register</string>
</resources>